# browser-mcp-bridge

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  DATA_OPTIMIZATION.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  PM2_GUIDE.md  README.md  RUST_IMPLEMENTATION_GUIDE.md  browser-mcp-bridge.js  browser-mcp-rust-server.service  ecosystem.config.cjs  install-rust-service.sh  package.json  pnpm-lock.yaml  start-rust-server.sh
extension/: background.js  content.js  devtools.html  devtools.js  inject.js  manifest.json  panel.html  panel.js  popup.html  popup.js
extension/icons/: generate-icons.js
rust-server/: Cargo.toml  Cargo.toml.mcp_attempt  Cargo_mcp_compliant.toml  IMPLEMENTATION_STATUS.md  README.md  config.toml
rust-server/benches/: server_benchmark.rs
rust-server/src/: lib.rs  main.rs  main_mcp_compliant.rs
rust-server/src/cache/: browser_data.rs  memory.rs  mod.rs
rust-server/src/config/: settings.rs
rust-server/src/server/: combined.rs  health.rs  mcp_server.rs  mod.rs  simple.rs  websocket.rs
rust-server/src/tools/: mod.rs  page_content.rs
rust-server/src/transport/: browser.rs  connection.rs  mod.rs  request.rs
rust-server/src/types/: browser.rs  errors.rs  mcp.rs  messages.rs  mod.rs
rust-server/src/utils/: dom.rs  filtering.rs  mod.rs  pagination.rs  truncation.rs
server/: TEST_SUMMARY.md  index.js  package.json  pnpm-lock.yaml  server.js  server.test.js
